examples/neg/blocks_in_value_pos.effekt
module blocks_in_value_pos

effect MyPrint(n: Int): Unit

def main { prog: Unit / MyPrint } =
  try { prog(); prog() } with {
    case MyPrint(n: Int) => {
      resume(prog);
      println(n)
    }
  }
