examples/neg/blocks_in_value_pos.check
examples/neg/blocks_in_value_pos.effekt:8:14:error: Blocks have to be fully applied and can't be used as values.
      resume(prog);
             ^
examples/neg/blocks_in_value_pos.effekt:8:14:error: Cannot find value binder for prog.
      resume(prog);
             ^
